# leapflow

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  WORLD_MODEL_ANALYSIS_REPORT.md  leapflow-architecture.html  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
docs/design/: adaptive_depth_ooda.md  leapflow_copilot.md  ooda_framework.md
leapflow/: config.py
leapflow/analysis/: abstractor.py  fs_pattern_pass.py  segmenter.py
leapflow/causal/: adapter.py  channel.py  components.py  inference.py  types.py
leapflow/cli/: banner.py  cli.py  tui.py
leapflow/cli/commands/: chat.py  host.py  learn.py  relearn.py  run.py  skills.py
leapflow/domain/: events.py  perception.py  skill_types.py
leapflow/engine/: __init__.py  budget.py  engine.py  error_classifier.py  scheduler.py  session.py  situational_assessor.py  task_graph.py  terminal_io.py
leapflow/host/: __init__.py  dev.py
leapflow/learning/: distiller.py  feedback.py  similarity.py  stream_progress.py
leapflow/llm/: __init__.py  openai_provider.py
leapflow/memory/: __init__.py  manager.py
leapflow/perception/: __init__.py  config.py
leapflow/perception/cv/: phash.py  scene_cut.py  ui_detect.py
leapflow/platform/: client.py  event_bus.py  facade.py  mock.py  normalizer.py
leapflow/recording/: __init__.py  field_policy_loader.py  health.py
leapflow/signal_fusion/: __init__.py  episode_agent.py  integrator.py  protocol.py  quality.py  wait_classifier.py
leapflow/skills/: __init__.py  activator.py  bridge_factory.py  conditions.py  discovery.py  index.py  injector.py  registry.py  sandbox.py  semantic_adapter.py  ui_summarizer.py
leapflow/storage/: __init__.py  session_store.py  skill_library.py  trajectory_store.py
leapflow/tools/: __init__.py  registry_bootstrap.py  shell_tools.py  system_tools.py  text_tools.py
leapflow/utils/: __init__.py  diagnostics.py  resilience.py
leapflow/world_model/: curiosity.py  replay.py
os_host/darwin/: Package.swift  vfs_overlay.yaml
os_host/linux/: README.md
os_host/protocol/: rpc_schema.yaml
os_host/windows/: README.md
scripts/: run.sh  setup.sh
src/leapflow/: __init__.py  __main__.py  _env_template.py  config.py  config_loader.py  config_service.py  layout.py  version.py
tests/: __init__.py  conftest.py  test_adaptive_depth.py  test_agent_execution.py  test_app_connector.py  test_approval_layer.py  test_cache_manager.py  test_cli_discovery.py  test_cli_entrypoint.py  test_cli_ndjson_event_source.py  test_code_tools.py  test_config_loader.py  test_context_disclosure.py  test_context_governance.py  test_daemon_rpc.py  test_dashboard_domains.py  test_dashboard_launcher.py  test_dashboard_sdui.py  test_dashboard_view.py  test_dashboard_watch_rpc.py  test_dev_terminal_tools.py  test_execution_backends.py  test_feishu_event_normalizer.py  test_gateway_adapters.py  test_gateway_consumer_loop.py  test_gateway_tool_e2e.py  test_layout.py  test_memory_and_storage.py  test_monitor_subsystem.py  test_orientation.py  test_path_sensitivity.py  test_perception_pipeline.py  test_platform_synthesis.py  test_pure_algorithms.py  test_recovery_audit.py  test_recovery_checkpoint.py  test_recovery_coordinator.py  test_recovery_strategies.py  test_reentry_driver.py  test_reentry_send.py  (+22 more)
(+430 files in other folders)
